--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="card__image-container">
           <span class="image-label">&lt;/HTML&gt;</span>
-          <img class="card__image filter__brightnes" src="./images/image-2.png">
+          <img class="card__image filter__brightnes" src="./images/image-2.png" alt="Фритрек">
         </div>
         <div class="card__footer">
           <div class="card__text">
@@ -82,7 +82,7 @@
         </div>
         <div class="card__image-container">
           <span class="image-label">&lt;/HTML&gt;</span>
-          <img class="card__image filter__multimillioner" src="./images/image-3.png">
+          <img class="card__image filter__multimillioner" src="./images/image-3.png" alt="1 спринт">
         </div>
         <div class="card__footer">
           <div class="card__text">
@@ -112,7 +112,7 @@
         </div>
         <div class="card__image-container">
           <span class="image-label">&lt;CSS&gt;</span>
-          <img class="card__image filter__sepia" src="./images/image-4.png">
+          <img class="card__image filter__sepia" src="./images/image-4.png" alt="1 спринт конец">
         </div>
         <div class="card__footer">
           <div class="card__text">
@@ -142,7 +142,7 @@
         </div>
         <div class="card__image-container">
           <span class="image-label">&lt;desigions&gt;</span>
-          <img class="card__image filter__hue" src="./images/image-5.png">
+          <img class="card__image filter__hue" src="./images/image-5.png" alt="2 спринт">
         </div>
         <div class="card__footer">
           <div class="card__text">
@@ -172,7 +172,7 @@
         </div>
         <div class="card__image-container">
           <span class="image-label">care</span>
-          <img class="card__image filter__saturate" src="./images/image-6.png">
+          <img class="card__image filter__saturate" src="./images/image-6.png" alt="2 спринт конец">
         </div>
         <div class="card__footer">
           <div class="card__text">
@@ -202,7 +202,7 @@
         </div>
         <div class="card__image-container">
           <span class="image-label">&lt;support&gt;</span>
-          <img class="card__image filter__gray" src="./images/image-7.png">
+          <img class="card__image filter__gray" src="./images/image-7.png" alt="3 спринт">
         </div>
         <div class="card__footer">
           <div class="card__text">
@@ -232,7 +232,7 @@
         </div>
         <div class="card__image-container">
           <span class="image-label">&lt;lifes-style: none;&gt;</span>
-          <img class="card__image filter__blur" src="./images/image-8.png">
+          <img class="card__image filter__blur" src="./images/image-8.png" alt="3 спринт конец">
         </div>
         <div class="card__footer">
           <div class="card__text">
@@ -262,7 +262,7 @@
         </div>
         <div class="card__image-container">
           <span class="image-label">&lt;experience&gt;</span>
-          <img class="card__image" src="./images/image-9.png">
+          <img class="card__image" src="./images/image-9.png" alt="Сейчас я здесь">
         </div>
         <div class="card__footer">
           <div class="card__text">
@@ -294,7 +294,7 @@
         aria-controls="modal"
         class="footer__button button">
         <svg class="footer__image" viewBox="0 0 28 28">
-          <use href="./svg/floppy.svg#floppy">
+          <use href="./svg/floppy.svg#floppy"></use>
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
@@ -302,7 +302,7 @@
     <dialog class="dialog" id="modal">
       <div class="dialog__content">
         <svg class="dialog__image" viewBox="0 0 28 28">
-          <use href="./svg/floppy.svg#floppy">
+          <use href="./svg/floppy.svg#floppy"></use>
         </svg>
         <p>Вставьте дискету, чтобы продолжить</p>
       </div>
