--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <span class="button__text">Сохранить на память</span>
       </button>
     </footer>
-    <dialog class="dialog" id="modal">
+    <dialog id="modal" class="dialog">
       <div class="dialog__content">
         <svg class="dialog__image" viewBox="0 0 28 28">
           <use href="./svg/floppy.svg#floppy"></use>
