--- a/index.html
+++ b/index.html
@@ -295,19 +295,20 @@
         <span class="button__text">Сохранить на память</span>
       </button>
     </footer>
-    <dialog class="dialog" id="modal">
-      <div class="dialog__content">
-        <svg class="dialog__image" viewBox="0 0 28 28">
-          <use href="./svg/floppy.svg#floppy"></use>
-        </svg>
-        <p>Вставьте дискету, чтобы продолжить</p>
-      </div>
-      <form method="dialog">
-        <button class="footer__button dialog__button" type="submit">
-          <span class="button__text">ОК</span>
-        </button>
-      </form>
-    </dialog>
+      <dialog class="dialog" id="modal">
+        <div class="dialog__content">
+          <svg class="dialog__image" viewBox="0 0 28 28">
+            <use href="./svg/floppy.svg#floppy"></use>
+          </svg>
+          <p>Вставьте дискету, чтобы продолжить</p>
+        </div>
+        <div>
+          <button class="footer__button dialog__button" type="button" onclick="modal.close()">
+            <span class="button__text">ОК</span>
+          </button>
+        </div>
+      </dialog>
+
     <script src="./scripts/like.js"></script>
     <script src="./scripts/set-theme.js"></script>
   </body>
