--- a/index.html
+++ b/index.html
@@ -288,13 +288,19 @@
       </article>
     </main>
     <footer class="footer">
-      <button type="button" onclick="modal.showModal()" class="footer__button button" aria-controls="modal">
+      <button
+        type="button"
+        class="footer__button button"
+        aria-controls="modal"
+        onclick="modal.showModal()"
+      >
         <svg class="footer__image" viewBox="0 0 28 28">
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
-    </footer>
+      </footer>
+
       <dialog class="dialog" id="modal">
         <div class="dialog__content">
           <svg class="dialog__image" viewBox="0 0 28 28">
@@ -303,11 +309,16 @@
           <p>Вставьте дискету, чтобы продолжить</p>
         </div>
         <div>
-          <button class="footer__button dialog__button" type="button" onclick="modal.close()">
+          <button
+            class="footer__button dialog__button"
+            type="button"
+            onclick="modal.close()"
+          >
             <span class="button__text">ОК</span>
           </button>
         </div>
       </dialog>
+
 
     <script src="./scripts/like.js"></script>
     <script src="./scripts/set-theme.js"></script>
