--- a/index.html
+++ b/index.html
@@ -292,32 +292,32 @@
         type="button"
         class="footer__button button"
         aria-controls="modal"
-        onclick="modal.showModal()"
+        onclick="modal.showModal(); return false;"
       >
         <svg class="footer__image" viewBox="0 0 28 28">
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
-      </footer>
+    </footer>
 
-      <dialog class="dialog" id="modal">
-        <div class="dialog__content">
-          <svg class="dialog__image" viewBox="0 0 28 28">
-            <use href="./svg/floppy.svg#floppy"></use>
-          </svg>
-          <p>Вставьте дискету, чтобы продолжить</p>
-        </div>
-        <div>
-          <button
-            class="footer__button dialog__button"
-            type="button"
-            onclick="modal.close()"
-          >
-            <span class="button__text">ОК</span>
-          </button>
-        </div>
-      </dialog>
+    <dialog class="dialog" id="modal">
+      <div class="dialog__content">
+        <svg class="dialog__image" viewBox="0 0 28 28">
+          <use href="./svg/floppy.svg#floppy"></use>
+        </svg>
+        <p>Вставьте дискету, чтобы продолжить</p>
+      </div>
+      <div>
+        <button
+          class="footer__button dialog__button"
+          type="button"
+          onclick="modal.close(); return false;"
+        >
+          <span class="button__text">ОК</span>
+        </button>
+      </div>
+    </dialog>
 
 
     <script src="./scripts/like.js"></script>
